Corrected h1-h3 throughout pag, fixed stretching in large desktop,fixed filter heading and footer sizing in tablet view, in mobile; fixed most popular section corners, hover effects on nav search bar resized and filter buttons stack properly

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
 	--filter-bg-color: #deebff;
 }
 body {
-	margin: 0;
+	max-width: 1440px;
+	margin: auto;
 }
 .fa-solid,
 .fa-regular {
@@ -54,8 +55,7 @@ body {
 	display: block;
 	border-top: 4px solid transparent;
 }
-.menu a:hover,
-.menu a.active {
+.menu a:hover {
 	display: block;
 	color: var(--main-color);
 	border-top: 4px solid var(--main-color);
@@ -78,7 +78,7 @@ a:visited {
 	font-weight: 700;
 	font-size: 18px;
 	border: 1px solid var(--main-bg-color);
-	width: 338px;
+	width: 250px;
 	height: 49px;
 }
 
@@ -271,6 +271,10 @@ a:visited {
 
 /****** Things to do ********/
 
+.ttd-wrapper {
+	padding: 20px;
+}
+
 .things-to-do-title {
 	font-size: 22px;
 	display: grid;
@@ -346,6 +350,10 @@ footer-section a:visited {
 /* for tablets*/
 
 @media (max-width: 1024px) {
+	.filters {
+		flex-direction: column;
+		align-items: flex-start;
+	}
 	.filter-items span {
 		padding: 15px;
 	}
@@ -359,6 +367,9 @@ footer-section a:visited {
 		grid-template-rows: 1fr;
 		grid-template-columns: 1fr 1fr 1fr;
 		gap: 20px;
+	}
+	.ttd-wrapper {
+		padding: 20px;
 	}
 	.things-to-do-title {
 		padding-top: 50px;
@@ -385,14 +396,14 @@ footer-section a:visited {
 		position: relative;
 	}
 	.footer-container {
-		position: absolute;
+		/* position: absolute; */
 		background-color: #f2f2f2;
 		left: 50px;
 	}
 }
 /* for phones */
 
-@media (max-width: 768px) {
+@media (max-width: 765px) {
 	body {
 		margin: 0;
 	}
@@ -407,8 +418,8 @@ footer-section a:visited {
 	.header-container {
 		display: flex;
 		flex-direction: column;
-		margin: 0;
-		gap: 10px;
+		margin-top: 20px;
+		gap: 40px;
 		width: 100%;
 	}
 	.booki-title {
@@ -457,8 +468,9 @@ footer-section a:visited {
 	}
 
 	.main-statement {
-		padding-left: 20px;
-		padding-right: 20px;
+		/* padding-left: 20px;
+		padding-right: 20px; */
+		margin: 0 auto;
 	}
 	.search-button {
 		display: none;
@@ -499,6 +511,10 @@ footer-section a:visited {
 	.accommodation-and-popular {
 		display: grid;
 		gap: 50px;
+	}
+	.accommodation-and-popular section {
+		border-radius: 0px;
+		padding: 15px 30px 15px;
 	}
 
 	.accommodation {
